# py-ewave

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.org  README.rst  ewave.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_ewave.py  test_wave.py  wave.py
.github/workflows/: publish-to-pypi.yml  tests-python.yml
resources/: wavefilespecs.webarchive
test/: fetch_examples.py  fetch_examples.sh
