[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ewave"
dynamic = ["version"]
description = "Extended WAVE I/O"
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "Python Software Foundation License"}
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "License :: OSI Approved :: Python Software Foundation License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
keywords = ["sound file", "data format"]
dependencies = [
    "numpy>=1.24.0; python_version == '3.11'",
    "numpy>=1.26.0; python_version == '3.12'",
    "numpy>=2.0; python_version == '3.13'",
    "numpy>=2.0; python_version == '3.14'",
]

[project.urls]
Homepage = "https://github.com/melizalab/py-ewave"

[dependency-groups]
dev = [
    "pytest>=5.0",
    "ruff>=0.7.0",
    "respx>=0.20",
]

[tool.hatch.version]
path = "ewave.py"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["."]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py37"
extend-exclude = ["build", "attic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E221", "E501", "E701"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

[tool.hatch.build]
include = ["ewave.py"]
exclude = ["*test*"]
artifacts = ["README.rst"]
