[pep8]
ignore=E221,E501,E701

[metadata]
name = ewave
version = attr: ewave.__version__
description = Extended WAVE I/O
long_description = Pure python module providing support for reading and writing extended WAVE audio file formats, including IEEE floats and >2 channel.
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: Python Software Foundation License
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Natural Language :: English
    Programming Language :: Python
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/py-ewave

[options]
zip_safe = false
py_modules = ewave
python_requires = >= 3.5
setup_requires =
    setuptools >=38.3.0
install_requires =
    numpy
test_suite = test_ewave

[options.packages.find]
exclude = *test*
