[pep8]
ignore=E221,E501,E701

[metadata]
name = ewave
version = attr: ewave.__version__
description = Extended WAVE I/O
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Python Software Foundation License
classifiers =
    License :: OSI Approved :: Python Software Foundation License
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = sound file, data format
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/py-ewave

[options]
py_modules = ewave
python_requires = >= 3.7
install_requires =
    numpy>=1.19.5
test_suite = test_ewave

[options.extras_require]
test =
    pytest >= 7.0
